--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,9 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-        <title>Pietrocola - Lab2</title>
+    <title>Pietrocola - Lab2</title>
 </head>
 <body>
-Welcome to COMP367!
+<script>
+    var currentTime = new Date();
+    var hours = currentTime.getHours();
+    var greeting;
+
+    if (hours < 12) {
+        greeting = "Good morning";
+    } else if (hours < 18) {
+        greeting = "Good afternoon";
+    } else {
+        greeting = "Good evening";
+    }
+
+    var name = "David Pietrocola";  // Replace with your actual name
+    document.write(greeting + ", " + name + ", Welcome to COMP367!");
+</script>
 </body>
 </html>
